# ml-template-analysis

./: .gitignore  pyproject.toml
general/: 1_data_exploration_preprocessing.ipynb  2_feature_engineering.ipynb  3_model_development_training.ipynb  functions.py
